Evaluate number and string value expressions

--- a/test/WhyNotLang.Interpreter.Tests/WhyNotLang.Interpreter.Tests.csproj
+++ b/test/WhyNotLang.Interpreter.Tests/WhyNotLang.Interpreter.Tests.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\WhyNotLang.Parser\WhyNotLang.Parser.csproj" />
+      <ProjectReference Include="..\..\src\WhyNotLang.Interpreter\WhyNotLang.Interpreter.csproj" />
       <ProjectReference Include="..\WhyNotLang.Test.Common\WhyNotLang.Test.Common.csproj" />
     </ItemGroup>
 
