Support block scope, add IoC, refactor

--- a/src/WhyNotLang.Cmd/WhyNotLang.Cmd.csproj
+++ b/src/WhyNotLang.Cmd/WhyNotLang.Cmd.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -13,6 +13,10 @@
       <None Update="Samples\Test.wnl">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     </ItemGroup>
 
 </Project>
