--- a/src/WhyNotLang.Interpreter/WhyNotLang.Interpreter.csproj
+++ b/src/WhyNotLang.Interpreter/WhyNotLang.Interpreter.csproj
@@ -8,4 +8,8 @@
       <ProjectReference Include="..\WhyNotLang.Parser\WhyNotLang.Parser.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    </ItemGroup>
+
 </Project>
