Fix returning from if statements and while statements. Recursion example - Fibonacci

--- a/src/WhyNotLang.Cmd/WhyNotLang.Cmd.csproj
+++ b/src/WhyNotLang.Cmd/WhyNotLang.Cmd.csproj
@@ -10,6 +10,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Update="Samples\Fibonacci.wnl">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
       <None Update="Samples\Test.wnl">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
