Move samples to separate project, add Pong source

--- a/src/WhyNotLang.Cmd/WhyNotLang.Cmd.csproj
+++ b/src/WhyNotLang.Cmd/WhyNotLang.Cmd.csproj
@@ -7,15 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\WhyNotLang.Interpreter\WhyNotLang.Interpreter.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Update="Samples\Fibonacci.wnl">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
-      <None Update="Samples\Test.wnl">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
+      <ProjectReference Include="..\WhyNotLang.Samples\WhyNotLang.Samples.csproj" />
     </ItemGroup>
 
     <ItemGroup>
