Add REFERENCE to Samples

--- a/src/WhyNotLang.Samples/WhyNotLang.Samples.csproj
+++ b/src/WhyNotLang.Samples/WhyNotLang.Samples.csproj
@@ -9,6 +9,7 @@
     <None Remove="MoveRectangleWASD.wnl" />
     <None Remove="Pong.wnl" />
     <None Remove="QuickSort.wnl" />
+    <None Remove="REFERENCE.md" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
     <EmbeddedResource Include="MoveRectangleWASD.wnl" />
     <EmbeddedResource Include="Pong.wnl" />
     <EmbeddedResource Include="QuickSort.wnl" />
+    <EmbeddedResource Include="REFERENCE.md" />
   </ItemGroup>
 
   <ItemGroup>
