--- a/src/WhyNotLang.EmbeddedResources/WhyNotLang.EmbeddedResources.csproj
+++ b/src/WhyNotLang.EmbeddedResources/WhyNotLang.EmbeddedResources.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>WhyNotLang.EmbeddedResources</AssemblyName>
+    <RootNamespace>WhyNotLang.EmbeddedResources</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
