--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ dist: xenial
 sudo: required
 language: csharp
 mono: none
-dotnet: 2.2.401
+dotnet: 3.1
 script:
-- "./scripts/install-dotnet.sh"
+#- "./scripts/install-dotnet.sh"
 - "./scripts/run-tests.sh"
 - "./scripts/build-web-package.sh"
 deploy:
